2016-07-29  Kirit Saelensminde  <kirit@felspar.com>
 * Make public a `jcursor` constructor so we can copy part of another one.
 * `jcursor` parts can be compared for equaility with string literals.
 * The `not_implemented` exception can now be given JSON as its third argument.
 * Add in nliteral comparison overloads in a couple of places they were missing.

2016-07-11  Kirit Saelensminde  <kirit@felspar.com>
 Fix a long standing bug in the Base64 encoder where it would add bad data when the data length was exactly divisible by 3.

2016-06-10  Kirit Saelensminde  <kirit@felspar.com>
 * Add a `fostlib::json::unparse` that takes a `fostlib::string`.
 * Add a `fostlib::json::get` overload that can be given a default to substitute if the value doesn't exist.
 * Add a coercion for the `sprintf` used in JSON unparsing. This should make it safer on a variety of platforms.

2016-03-25  Kirit Saelensminde  <kirit@felspar.com>
 * Add the F5 threadintg library to the standard project includes.
 * Optimise the JSON unparse, especially for the case where we can unparse into a buffer.

2016-03-22  Kirit Saelensminde  <kirit@felspar.com>
 Added coercion for `std::vector` to JSON, which will give an array of the vector values coerced to JSON.

2015-12-11  Kirit Saelensminde  <kirit@felspar.com>
 * New `fostlib::crypto_bytes` function returns an array of bytes from a cryptographically secure location.
 * Add new `fostlib::array_view` that allows for looking at memory areas.
 * Implement PKBKDF2 with HMAC and SHA256 that produces a fixed length (64 bytes) derived key and one that produces a derived key whose length can be chosen at run time.
 * Added `fostlib::crypto_compare` which is intended to be as close as possible to constant time for comparison of memory blocks (byte arrays and strings).

2015-12-07  Kirit Saelensminde  <kirit@felspar.com>
 Allow HMAC with std::array<unsigned char, n> secrets.

2015-11-21  Kirit Saelensminde  <kirit@felspar.com>