@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2015,Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2016,Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -21,8 +21,6 @@
 #include <fost/settings.hpp>
 #include <fost/utility-nullable.hpp>
 #include <fost/coerce/ints.hpp>
-
-#include <fost/exception/not_implemented.hpp>
 
 #include <fost/coerce/win.hpp>
 
